<resources>
    <string name="app_name">سالك</string>
    <string name="logo">logo</string>
    <string name="login">تسجيل الدخول</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="password_confirmation">تأكيد كلمة المرور</string>
    <string name="forget_password">نسيت كلمة المرور؟</string>
    <string name="dont_have_account">ليس لديك حساب؟ تسجيل جديد</string>
    <string name="have_account"> لديك حساب بالفعل؟ تسجيل الدخول</string>
    <string name="register"> تسجيل</string>
    <string name="new_register">تسجيل جديد</string>
    <string name="rdm">Road Damage Management</string>
    <string name="title_activity_map">Map</string>
    <string name="account">الحساب</string>
    <string name="profile">الملف الشخصي</string>
    <string name="tickets">التذاكر</string>
    <string name="forget_pass">استعادة كلمة المرور</string>
    <string name="forget">استعادة</string>

    <string name="con_loc">اعتماد الموقع</string>
    <string name="hint_screen">تلميحات الاستخدم</string>
    <string name="hint_profile">الملف الشخصي</string>
    <string name="hint_locate">تحديد الموقع بدقة</string>
    <string name="hint_ticket">اعتماد الموقع والمتابعة للتذكرة</string>

</resources>
