<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.RegisterActivity">


    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="223dp"
        android:layout_height="208dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/salik_logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:elevation="20dp"
        android:layout_marginTop="50dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/imageLogo"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ar"
            app:fontFamily="@font/ar_font"
            android:text="@string/new_register"
            android:textSize="24dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/ar"
            android:text="@string/have_account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:fontFamily="@font/ar_font"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.829" />

        <EditText
            android:id="@+id/emailReg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:autofillHints="@string/email"
            android:ems="10"
            android:fontFamily="@font/ar_font"
            app:fontFamily="@font/ar_font"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.225"
            tools:targetApi="o"
            android:drawableStart="@drawable/email"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp" />


        <EditText
            android:id="@+id/passwordReg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:autofillHints="@string/password"
            android:ems="10"
            android:fontFamily="@font/ar_font"
            app:fontFamily="@font/ar_font"
            android:gravity="right"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.376"
            tools:targetApi="o"
            android:drawableStart="@drawable/lock"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="10dp" />


        <EditText
            android:id="@+id/passwordCon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:autofillHints="@string/password_confirmation"
            android:ems="10"
            android:fontFamily="@font/ar_font"
            android:gravity="right"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/hint"
            app:fontFamily="@font/ar_font"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.525"
            tools:targetApi="o"
            android:drawableStart="@drawable/lock"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="10dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/btn_rounded"
            app:fontFamily="@font/ar_font"
            android:fontFamily="@font/ar_font"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:shadowColor="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordCon"
            app:layout_constraintVertical_bias="0.253" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>